--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Bangladesh 2.0</title>
 </head>
 <body>
 
-    <header>
-        <h1>Bangladesh 2.0</h1>
-        <button class="btn">Sign In</button>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Bangladesh 2.0</h1>
+            <button class="btn">Sign In</button>
+        </header>
+        <main>
+            <section class="banner">
+                <div class="text">
+                    <h3>Bangladesh 2.0</h3>
+                    <h1>Idea , innovation , <br> vision and challenges in <br> New Bangladesh.</h1>
+                    <button class="btn">Explore New Bangladesh</button>
+                </div>
+                
+            </section>
+        </main>
+    </div>
     
 </body>
 </html>
