--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                     <h1>Idea , innovation , <br> vision and challenges in <br> New Bangladesh.</h1>
                     <button class="btn">Explore New Bangladesh</button>
                 </div>
-                
+                <div class="img-box">
+                    <img src="assets/hero.png" alt="">
+                </div>
             </section>
         </main>
     </div>
