--- a/index.html
+++ b/index.html
@@ -84,43 +84,127 @@
             </section>
             <section class="opinion">
                 <h1>Your Opinion Matters</h1>
-                <thead>
-                    <tr>
-                        <td>
-                            <p>Question</p>
-                            <p>Selection</p>
-                        </td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
-                        <td>
-                            <select>
-                                <option value="Yes, I Agree">Yes, I Agree</option>
-                                <option value="No, I Don't Agree">No, I Don't</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
-                        <td>
-                            <select>
-                                <option value="Yes, I Agree">Yes, I Agree</option>
-                                <option value="No, I Don't Agree">No, I Don't</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
-                        <td>
-                            <select>
-                                <option value="Yes, I Agree">Yes, I Agree</option>
-                                <option value="No, I Don't Agree">No, I Don't</option>
-                            </select>
-                        </td>
-                    </tr>
-                </tbody>
+                <div class="questions">
+                    <div class="head">
+                        <h4>Questions</h4>
+                        <h4>Select Your Opinion</h4>
+                    </div>
+                    <div class="body">
+                        <div class="row">
+                            <div class="right">
+                                <h6>Do you believe Bangladesh is on the right path toward becoming a developed nation</h6>
+                            </div>
+                            <div class="left">
+                                <div class="box">
+                                    Yes, I Agree <i style="font-size: 26px; margin-left: 5px;" class='bx bx-chevron-down'></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="right">
+                                <h6>Do you believe Bangladesh is on the right path toward becoming a developed nation</h6>
+                            </div>
+                            <div class="left">
+                                <div class="box">
+                                    Yes, I Agree <i style="font-size: 26px; margin-left: 5px;" class='bx bx-chevron-down'></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="right">
+                                <h6>Do you believe Bangladesh is on the right path toward becoming a developed nation</h6>
+                            </div>
+                            <div class="left">
+                                <div class="box">
+                                    Yes, I Agree <i style="font-size: 26px; margin-left: 5px;" class='bx bx-chevron-down'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="news">
+                <h1>Recent News</h1>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+                <div class="cards">
+                    <div class="card">
+                        <div class="img-box">
+                            <img style="border-radius: 24px;" src="assets/satelite.png" alt="">
+                        </div>
+                        <div class="text">
+                            <h1>Bangladesh Launches New Satellite</h1>
+                            <img style="margin-top: -14px; margin-bottom: 24px;" width="130px" src="assets/al-jazeera.png" alt="">
+                            <div class="moment">
+                                <p class="date">Date: 05/01/2025</p>
+                                <p class="time">Time: 10.25 PM</p>
+                            </div>
+                            <p style="margin-top: -20px; margin-bottom: 28px;">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="btn">Read More</button>
+                        </div>
+                    </div>
+                    <div class="card" style="flex-direction: row-reverse;">
+                        <div class="img-box">
+                            <img style="border-radius: 24px;" src="assets/satelite.png" alt="">
+                        </div>
+                        <div class="text" style="margin-right: 32px;">
+                            <h1>Bangladesh Launches New Satellite</h1>
+                            <img style="margin-top: -14px; margin-bottom: 24px;" width="130px" src="assets/al-jazeera.png" alt="">
+                            <div class="moment">
+                                <p class="date">Date: 05/01/2025</p>
+                                <p class="time">Time: 10.25 PM</p>
+                            </div>
+                            <p style="margin-top: -20px; margin-bottom: 28px;">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="btn">Read More</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="img-box">
+                            <img style="border-radius: 24px;" src="assets/satelite.png" alt="">
+                        </div>
+                        <div class="text">
+                            <h1>Bangladesh Launches New Satellite</h1>
+                            <img style="margin-top: -14px; margin-bottom: 24px;" width="130px" src="assets/al-jazeera.png" alt="">
+                            <div class="moment">
+                                <p class="date">Date: 05/01/2025</p>
+                                <p class="time">Time: 10.25 PM</p>
+                            </div>
+                            <p style="margin-top: -20px; margin-bottom: 28px;">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="btn">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="donate">
+                <h1>Donate Today</h1>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. <br> With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+                <div class="cards">
+                    <div class="cards">
+                        <div class="card">100 Taka</div>
+                        <div style="background: #c6e4d6; transform: scale(1.1);" class="card">200 Taka</div>
+                        <div class="card">500 Taka</div>
+                        <div class="card">1000 Taka</div>
+                    </div>
+                </div>
+                <input type="text" placeholder="Other Amount (Taka)">
+                <button class="btn">Done Now</button>
+            </section>
+            <section class="subscribe">
+                <h1>Subscribe Newsletter</h1>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+                <div class="input-box">
+                    <input type="email" placeholder="Enter your email here">
+                    <button class="btn">Subscribe</button>
+                </div>
+                <span>We promise not to spam you!</span>
+            </section>
+            <section class="last">
+                <h1>Bangladesh 2.0</h1>
+                <div class="divider"></div>
+                <div class="icons">
+                    <img src="assets/facebook.png" alt="">
+                    <img src="assets/instagram.png" alt="">
+                    <img src="assets/x.png" alt="">
+                </div>
             </section>
         </main>
     </div>
