--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </section>
             <section class="last">
                 <h1>Bangladesh 2.0</h1>
-                <div class="divider"></div>
+                <div class="dividor"></div>
                 <div class="icons">
                     <img src="assets/facebook.png" alt="">
                     <img src="assets/instagram.png" alt="">
