--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                     </div>
                     <div class="card">
                         <img width="64px" src="assets/card-icon.png" alt="">
-                        <h4>Digital Transformation</h4>
-                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <h4>Green Energy</h4>
+                        <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                         <button class="btn">Learn More</button>
                     </div>
                     <div class="card">
                         <img width="64px" src="assets/card-icon.png" alt="">
-                        <h4>Digital Transformation</h4>
-                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <h4>Modern Infrastructure</h4>
+                        <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                         <button class="btn">Learn More</button>
                     </div>
                 </div>
