--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     </div>
                 </div>
                 <div class="text">
+                    <img src="assets/quote-bg.png" alt="">
                     <p>The vision of the future is a world where technology seamlessly integrates into daily life, enhancing human potential while maintaining environmental sustainability. Innovations in AI, renewable energy, and space exploration promise a brighter, more connected world. Education will be accessible to all, and healthcare will be revolutionized with advanced treatments. As societies evolve, global cooperation and inclusivity will drive progress, ensuring that future generations inherit a world that is both advanced and compassionate.</p>
                     <h4>Dr. Muhammad Yunus</h4>
                     <span>Chief Adviser of the Peoples Republic of Bangladesh</span>
